--- a/IgBotPrj/IgBotApp/static/panel/style.css
+++ b/IgBotPrj/IgBotApp/static/panel/style.css
@@ -4,12 +4,26 @@
 }
 
 
-
 .form-group {
+    background-color: rgba(41, 96, 234, 0.3);
+    border-radius: 24px;
     align-items: center;
-    margin-left: 40%;
-    margin-right: 40%;
+    margin-left: 25%;
+    margin-right: 25%;
     display: flex;
     flex-flow: column;
-    gap: 10px
+    gap: 10px;
+    padding: 15px;
+}
+
+@media only screen and (max-width: 900px) {
+    .form-group {
+        margin-left: 13%;
+        margin-right: 13%;
+    }
+}
+
+.form-inside {
+    margin-left: auto;
+    margin-right: auto;
 }
