--- a/IgBotPrj/IgBotApp/templates/panel/panel.html
+++ b/IgBotPrj/IgBotApp/templates/panel/panel.html
@@ -20,7 +20,7 @@
         </form>
         <form class="form-group" action="/follow" method="get">
             <label>Profile URL: </label>
-            <input id="username" type="text" name="username" value="https://instagram.com/migos/">
+            <input id="link" type="text" name="link" value="https://instagram.com/migos/">
             <input type="submit" value="Follow profile">
         </form>
 
