--- a/IgBotPrj/IgBotApp/static/panel/style.css
+++ b/IgBotPrj/IgBotApp/static/panel/style.css
@@ -8,19 +8,38 @@
     background-color: rgba(41, 96, 234, 0.3);
     border-radius: 24px;
     align-items: center;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 26%;
+    margin-right: 26%;
     display: flex;
     flex-flow: column;
     gap: 10px;
-    padding: 5px;
+    padding: 12px;
 }
+
+.outer {
+    background-color: rgba(41, 96, 234, 0.3);
+    border-radius: 24px;
+    align-items: center;
+    margin-left: 35%;
+    margin-right: 35%;
+    display: flex;
+    flex-flow: column;
+    gap: 10px;
+    padding: 10px;
+}
+
+label {}
 
 @media only screen and (max-width: 900px) {
     .form-group {
         margin-left: 13%;
         margin-right: 13%;
     }
+}
+
+.profiles-display {
+    display: flex;
+    gap: 5px;
 }
 
 .form-inside {
