--- a/IgBotPrj/IgBotApp/templates/panel/panel.html
+++ b/IgBotPrj/IgBotApp/templates/panel/panel.html
@@ -6,52 +6,59 @@
   <title>DEMO</title>
 </head>
 <div>
-  <div class="form-group">
+  <div class="outer">
     <div class="title">
       <h1 style="font-size: medium">Sprint 2 API Application Demonstration</h1>
     </div>
 
     <form class="form-group" action="storecredentials" method="get">
       <input id="username" type="text" name="username" value="" />
-      <input id="password" type="text" name="password" value="" />
+      <input id="password" type="password" name="password" value="" />
       <button type="submit" class="btn">Remember credentials</button>
     </form>
     <form class="form-group" action="loadcredentials" method="get">
-      <button type="submit" class="btn">Load saved session</button>
+      <label>Load session</label>
+      <div class="profiles-display">
+        {% for account in accounts %}
+
+        <button type="submit" id="username" name="username" value={{account.username}}
+          class="btn">{{account.username}}</button>
+        {% endfor %}
+      </div>
     </form>
     <form class="form-group" action="/follow" method="get">
-      <label>Profile URL: </label>
-      <input
-        id="link"
-        type="text"
-        name="link"
-        value="https://instagram.com/migos/"
-      />
-      <input type="submit" value="Follow profile" />
+      <label>Follow profile</label>
+      <input id="link" type="text" name="link" value="https://instagram.com/migos/" />
+      <div class="profiles-display">
+        {% for account in accounts %}
+        <button type="submit" id="username" name="username" value={{account.username}}
+          class="btn">{{account.username}}</button>
+        {% endfor %}
+      </div>
     </form>
 
     <form class="form-group" action="/like" method="get">
-      <label>Post URL: </label>
-      <input
-        id="link"
-        type="text"
-        name="link"
-        value="https://www.instagram.com/p/ChslcDvvQqE"
-      />
-      <input type="submit" value="Like post" />
+      <label>Like post</label>
+      <input id="link" type="text" name="link" value="https://www.instagram.com/p/ChslcDvvQqE" />
+      <div class="profiles-display">
+        {% for account in accounts %}
+        <button type="submit" id="username" name="username" value={{account.username}}
+          class="btn">{{account.username}}</button>
+        {% endfor %}
+      </div>
     </form>
 
     <form class="form-group" action="/comment" method="get">
-      <label>Post URL: </label>
-      <input
-        id="link"
-        type="text"
-        name="link"
-        value="https://www.instagram.com/p/ChslcDvvQqE"
-      />
-      <label>Comment: </label>
+      <label>Comment on post</label>
+      <input id="link" type="text" name="link" value="https://www.instagram.com/p/ChslcDvvQqE" />
+      <label>Text</label>
       <input id="comment" type="text" name="comment" value="This is so cool!" />
-      <input type="submit" value="Leave a comment" />
+      <div class="profiles-display">
+        {% for account in accounts %}
+        <button type="submit" id="username" name="username" value={{account.username}}
+          class="btn">{{account.username}}</button>
+        {% endfor %}
+      </div>
     </form>
   </div>
 </div>
