Fixed like function

--- a/IgBotPrj/IgBotApp/templates/panel/panel.html
+++ b/IgBotPrj/IgBotApp/templates/panel/panel.html
@@ -73,6 +73,7 @@
       <input id="targetUsername" type="text" name="targetUsername" value="migos" />
       <label>Text</label>
       <input id="comment" type="text" name="comment" value="This is so cool!" />
+      <label><input type=checkbox name="like" id="like"  checked="True" unchecked="False">Like</label>
       <label>Count</label>
       <input id="count" type="number" name="count" value="3" />
       <div class="profiles-display">
