--- a/IgBotPrj/IgBotApp/templates/panel/panel.html
+++ b/IgBotPrj/IgBotApp/templates/panel/panel.html
@@ -16,6 +16,11 @@
       <input id="password" type="password" name="password" value="" />
       <button type="submit" class="btn">Remember credentials</button>
     </form>
+    <form class="form-group" action="fetchaccount" method="get">
+      <input id="username" type="text" name="username" value="" />
+      <input id="password" type="password" name="password" value="" />
+      <button type="submit" class="btn">Remember credentials</button>
+    </form>
     <form class="form-group" action="loadcredentials" method="get">
       <label>Load session</label>
       <div class="profiles-display">
