--- a/IgBotPrj/IgBotApp/templates/panel/panel.html
+++ b/IgBotPrj/IgBotApp/templates/panel/panel.html
@@ -8,7 +8,7 @@
 <div>
   <div class="outer">
     <div class="title">
-      <h1 style="font-size: medium">Sprint 2 API Application Demonstration</h1>
+      <h1 style="font-size: medium">Sprint API Application Demonstration</h1>
     </div>
 
     <form class="form-group" action="/storecredentials" method="get">
@@ -73,7 +73,7 @@
       <input id="targetUsername" type="text" name="targetUsername" value="migos" />
       <label>Text</label>
       <input id="comment" type="text" name="comment" value="This is so cool!" />
-      <label><input type=checkbox name="like" id="like"  checked="True" unchecked="False">Like</label>
+      <label><input type=checkbox name="like" id="like" checked="True" unchecked="False">Like</label>
       <label>Count</label>
       <input id="count" type="number" name="count" value="3" />
       <div class="profiles-display">
