--- a/IgBotPrj/IgBotApp/templates/panel/panel.html
+++ b/IgBotPrj/IgBotApp/templates/panel/panel.html
@@ -131,7 +131,7 @@
       <input id="noOfFollowersToScrape" type="number" name="noOfFollowersToScrape" value="paintings" />
       <label>Max number of posts to scrape</label>
       <input id="noOfPostsToScrape" type="number" name="noOfPostsToScrape" value="paintings" />
-      <label>Hashtag Scraping Option (0-top posts, 1-random posts, 2-all)</label>
+      <label>Hashtag Scraping Option (0-ALL_POSTS, 1-TOP_POSTS, 2-ALL_POSTS)</label>
       <input id="hashtagOption" type="number" name="hashtagOption" value="2" />
       <div class="profil
       es-display">
